syntax = "proto3";

option go_package = "discord/pkg/service/auth";

package service.auth;

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
}

message RegisterRequest {
  string username = 1 ;
  string email    = 2;
  string password = 3 ;
}



message RegisterResponse {
  string message = 1;
}

message LoginRequest {
  string username = 1 ;
  string password = 2 ;
}

message LoginResponse {
  string token = 1;
}

message ForgotPasswordRequest {
  string email = 1 ;
}

message ForgotPasswordResponse {
  string message = 1;
}

message ResetPasswordRequest {
  string token = 1 ;
  string new_password = 2 ;
}

message ResetPasswordResponse {
  string message = 1;
}
